# daily-chow

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.caddy  Dockerfile.frontend  dev.sh  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
docs/: deployment.md  smoothie-default.json
docs/plans/: 2026-02-11-daily-chow-design.md  2026-02-11-svelte-redesign.md  2026-02-12-food-db-overhaul-design.md  2026-02-12-ingredient-impact-design.md  2026-02-12-ingredient-impact-plan.md  2026-02-12-micronutrient-optimization-design.md  2026-02-12-pinned-meals-design.md  2026-02-12-pinned-meals-plan.md  2026-02-12-vps-setup-guide.md  2026-02-12-web-deployment-design.md  2026-02-13-macro-ratio-target-design.md  2026-02-13-macro-ratio-target-plan.md  2026-02-14-macro-constraints-design.md  2026-02-14-macro-constraints-plan.md  2026-02-16-ingredient-diversity-design.md  2026-02-16-ingredient-diversity-plan.md  2026-02-16-similar-ingredient-deranking-design.md  2026-02-16-similar-ingredient-deranking-plan.md  2026-02-17-client-side-solver-design.md  2026-02-17-client-side-solver-plan.md  2026-02-17-draggable-priority-cards-design.md  2026-02-17-draggable-priority-cards-plan.md  2026-02-17-export-feature-design.md  2026-02-17-export-feature-plan.md  2026-02-17-mobile-first-design.md  2026-02-17-mobile-first-plan.md  (+6 more)
frontend/: package.json  svelte.config.js  vitest.config.ts
scripts/: build_food_db.py  match_usda.py  trim_usda.py
tests/: test_api_health.py  test_solver.py
(+43 files in other folders)
