[project]
name = "daily-chow"
version = "0.1.0"
description = "Interactive meal macro solver TUI powered by CP-SAT"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.15.6755",
    "textual>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "textual-dev>=1.0"]

[project.scripts]
daily-chow = "daily_chow.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
