[project]
name = "daily-chow"
version = "0.2.0"
description = "Interactive meal macro solver — Svelte frontend + FastAPI + CP-SAT"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.15.6755",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anthropic>=0.79.0",
    "pytest>=9.0.2",
]
